k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sufyan-collection
  labels:
    app: sufyan-collection
    env: production
