k8s/06-prometheus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sc-prometheus
  namespace: sufyan-collection
  labels:
    app: sc-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sc-prometheus
  template:
    metadata:
      labels:
        app: sc-prometheus
    spec:
      serviceAccountName: prometheus-sa
      containers:
        - name: prometheus
          image: prom/prometheus:v2.48.0
          args:
            - '--config.file=/etc/prometheus/prometheus.yml'
            - '--storage.tsdb.path=/prometheus'
            - '--web.enable-lifecycle'
            - '--storage.tsdb.retention.time=15d'
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus
            - name: storage
              mountPath: /prometheus
          resources:
            requests:
              memory: "256Mi"
              cpu:    "100m"
            limits:
              memory: "512Mi"
              cpu:    "250m"
      volumes:
        - name: config
          configMap:
            name: prometheus-config
        - name: storage
          persistentVolumeClaim:
            claimName: prometheus-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: sc-prometheus-service
  namespace: sufyan-collection
  labels:
    app: sc-prometheus
spec:
  selector:
    app: sc-prometheus
  ports:
    - port:     9090
      targetPort: 9090
      nodePort: 30090
      name: web
  type: NodePort
